[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/FashionVictim.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/BottomFrame.png" type="Texture" id=2]
[ext_resource path="res://GUI/default.theme.tres" type="Theme" id=3]
[ext_resource path="res://GUI/AudioMenu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="AudioMenu" type="Popup"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -200.0
margin_right = 150.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 400 )
theme = ExtResource( 3 )
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0

[node name="Title" type="Label" parent="ColorRect/VBoxContainer"]
margin_right = 280.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
text = "Audio Options"
align = 1

[node name="Separator1" type="TextureRect" parent="ColorRect/VBoxContainer"]
margin_top = 66.0
margin_right = 280.0
margin_bottom = 98.0
rect_min_size = Vector2( 280, 32 )
texture = ExtResource( 2 )
expand = true

[node name="MasterVolumeLabel" type="Label" parent="ColorRect/VBoxContainer"]
margin_top = 102.0
margin_right = 280.0
margin_bottom = 136.0
text = "Master Volume"
align = 1

[node name="MasterVolumeSlider" type="HSlider" parent="ColorRect/VBoxContainer"]
margin_top = 140.0
margin_right = 280.0
margin_bottom = 156.0
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="SFXVolumeLabel" type="Label" parent="ColorRect/VBoxContainer"]
margin_top = 160.0
margin_right = 280.0
margin_bottom = 194.0
text = "Sound Effects Volume"
align = 1

[node name="SFXVolumeSlider" type="HSlider" parent="ColorRect/VBoxContainer"]
margin_top = 198.0
margin_right = 280.0
margin_bottom = 214.0
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="MusicVolumeLabel" type="Label" parent="ColorRect/VBoxContainer"]
margin_top = 218.0
margin_right = 280.0
margin_bottom = 252.0
text = "Music Volume"
align = 1

[node name="MusicVolumeSlider" type="HSlider" parent="ColorRect/VBoxContainer"]
margin_top = 256.0
margin_right = 280.0
margin_bottom = 272.0
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="Separator2" type="TextureRect" parent="ColorRect/VBoxContainer"]
margin_top = 276.0
margin_right = 280.0
margin_bottom = 308.0
rect_min_size = Vector2( 280, 32 )
texture = ExtResource( 2 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/VBoxContainer"]
margin_top = 312.0
margin_right = 280.0
margin_bottom = 350.0

[node name="DoneButton" type="Button" parent="ColorRect/VBoxContainer/CenterContainer"]
margin_left = 107.0
margin_right = 172.0
margin_bottom = 38.0
rect_min_size = Vector2( 65, 0 )
text = "Done"

[connection signal="value_changed" from="ColorRect/VBoxContainer/MasterVolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="value_changed" from="ColorRect/VBoxContainer/SFXVolumeSlider" to="." method="_on_SFXVolumeSlider_value_changed"]
[connection signal="value_changed" from="ColorRect/VBoxContainer/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/CenterContainer/DoneButton" to="." method="_on_DoneButton_pressed"]
